--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "generate-static": "node scripts/generate-initial-static.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
