--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "build:themes": "node scripts/build-themes.js",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
