--- a/package.json
+++ b/package.json
@@ -1,25 +1,14 @@
 {
-  "name": "page-builder-cms",
-  "version": "0.1.0",
+  "name": "cms-master-dashboard",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run build:themes && npm run generate-static && next build",
-    "build:themes": "node scripts/build-themes.js",
-    "build:safe": "npm run build:themes && (npm run generate-static || echo 'Static generation skipped') && next build",
-    "build:production": "npm run build:themes && npm run generate-static && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-static": "node scripts/generate-initial-static.js",
-    "postbuild": "echo 'Build completed successfully!'",
-    "vercel-build": "npm run build:themes && npm run generate-static && next build",
-    "deploy": "node scripts/deploy-vercel.js",
-    "deploy:auto": "node scripts/deploy-vercel-auto.js",
     "deploy:vercel": "vercel --prod",
-    "deploy:preview": "vercel",
-    "env:auto": "node scripts/auto-setup.js",
-    "setup": "npm run env:auto && npm run deploy:vercel",
-    "env:setup": "echo 'Add these environment variables to your Vercel project:' && echo 'NEXT_PUBLIC_SUPABASE_URL' && echo 'NEXT_PUBLIC_SUPABASE_ANON_KEY' && echo 'SUPABASE_SERVICE_ROLE_KEY'"
+    "deploy:preview": "vercel"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
