Auto Genrate Site

--- a/cms-master/package.json
+++ b/cms-master/package.json
@@ -11,6 +11,7 @@
     "start": "next start",
     "lint": "next lint",
     "generate-static": "node scripts/generate-initial-static.js",
+    "setup-content": "node scripts/setup-starter-content.js",
     "postbuild": "echo 'Build completed successfully!'",
     "vercel-build": "npm run build:themes && npm run generate-static && next build",
     "deploy": "node scripts/deploy-vercel.js",
@@ -19,6 +20,7 @@
     "deploy:preview": "vercel",
     "env:auto": "node scripts/auto-setup.js",
     "setup": "npm run env:auto && npm run deploy:vercel",
+    "setup:complete": "npm run env:auto && npm run deploy:vercel && npm run setup-content",
     "env:setup": "echo 'Add these environment variables to your Vercel project:' && echo 'NEXT_PUBLIC_SUPABASE_URL' && echo 'NEXT_PUBLIC_SUPABASE_ANON_KEY' && echo 'SUPABASE_SERVICE_ROLE_KEY'"
   },
   "dependencies": {
