--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+# Large files and build artifacts
+cms-master/node_modules/
+cms-master/.next/
+cms-master/package-lock.json
+
