--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,62 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
+*/node_modules/
 
-# dependencies
-/node_modules
+# Next.js build outputs
+.next/
+*/.next/
+out/
+*/out/
 
-# next.js
-/.next/
-/out/
+# Package lock files
+package-lock.json
+*/package-lock.json
 
-# production
-/build
+# Build and cache files
+*.tsbuildinfo
+.turbo/
 
-# debug
+# OS generated files
+.DS_Store
+*/.DS_Store
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+
+# Environment files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files
-.env*
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# vercel
-.vercel
+# Coverage directory used by tools like istanbul
+coverage/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-# Large files and build artifacts
-cms-master/node_modules/
-cms-master/.next/
-cms-master/package-lock.json
+# Dependency directories
+jspm_packages/
 
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
