--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ['nodejs-18_x', 'npm-9_x']
 
 [phases.install]
-cmds = ['npm ci --legacy-peer-deps']
+cmds = ['npm ci --legacy-peer-deps || npm install --legacy-peer-deps']
 
 [phases.build]
 cmds = ['npm run build']
