--- a/railway.toml
+++ b/railway.toml
@@ -1,13 +1,15 @@
 [build]
-builder = "NIXPACKS"
-buildCommand = "npm run build"
+builder = "DOCKERFILE"
+dockerfilePath = "Dockerfile"
 
 [deploy]
 healthcheckPath = "/api/health"
-healthcheckTimeout = 100
+healthcheckTimeout = 30
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
+restartPolicyMaxRetries = 3
+startCommand = "node server.js"
 
 [env]
 NODE_ENV = "production"
 PORT = "3000"
+NEXT_TELEMETRY_DISABLED = "1"
