🧹 Remove Shared CMS Database Completely
✅ REMOVED COMPONENTS:
- Deleted lib/supabase.ts (entire shared CMS database library)
- Removed all shared CMS environment variable references
- Updated debug endpoints to only check master database
- Cleaned up all example environment files
- Updated architecture documentation

🔧 UPDATED FILES:
- app/api/debug-railway-env/route.ts - Only checks master DB vars
- app/api/debug-env/route.ts - Removed shared CMS checks
- app/api/master/delete/route.ts - Removed adminDeleteSite import/usage
- All *.env.example files - Removed shared CMS sections
- UPDATED-ARCHITECTURE.md - Marked shared CMS as removed

🎯 RESULT:
- Application now only uses Master Dashboard Database
- Simplified architecture with single database
- No more fallback.supabase.co errors from shared CMS
- Cleaner codebase focused on master dashboard functionality

This resolves the Railway database connection issues by removing
the unused shared CMS database dependency entirely.

--- a/master-env.example
+++ b/master-env.example
@@ -10,15 +10,10 @@ NEXT_PUBLIC_MASTER_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 MASTER_SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
 # =============================================
-# SHARED CMS DATABASE CONFIGURATION
+# NOTE: SHARED CMS DATABASE REMOVED
 # =============================================
-# This is the SHARED database that all CMS instances will use (multi-tenant)
-# This should be your EXISTING CMS Supabase project
-
-# Shared CMS Database (where all sites will be created)
-NEXT_PUBLIC_SUPABASE_URL=https://your-cms-project-ref.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
-SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+# This application now only uses the Master Dashboard Database
+# The shared CMS functionality has been removed for simplicity
 
 # =============================================
 # API CONFIGURATION
