--- a/railway-docker.env.example
+++ b/railway-docker.env.example
@@ -26,10 +26,7 @@ NEXT_PUBLIC_MASTER_SUPABASE_URL=https://your-master-project.supabase.co
 NEXT_PUBLIC_MASTER_SUPABASE_ANON_KEY=your-master-anon-key
 MASTER_SUPABASE_SERVICE_ROLE_KEY=your-master-service-key
 
-# Shared CMS Database
-NEXT_PUBLIC_SUPABASE_URL=https://your-shared-cms-project.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-shared-cms-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-shared-cms-service-key
+# NOTE: Shared CMS Database removed - only using Master Dashboard Database
 
 # =============================================
 # API CONFIGURATION
