--- a/railway.env.example
+++ b/railway.env.example
@@ -14,13 +14,10 @@ NEXT_PUBLIC_MASTER_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 MASTER_SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
 # =============================================
-# SHARED CMS DATABASE (Required)
+# NOTE: SHARED CMS DATABASE REMOVED
 # =============================================
-# This is the database that ALL deployed CMS instances will share
-# Each CMS instance gets a unique site_id for data isolation
-NEXT_PUBLIC_SUPABASE_URL=https://your-shared-cms-project.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
-SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+# This application now only uses the Master Dashboard Database
+# The shared CMS functionality has been removed for simplicity
 
 # =============================================
 # VERCEL API CONFIGURATION (Required)
