--- a/railway.env.example
+++ b/railway.env.example
@@ -5,6 +5,15 @@
 # DO NOT commit actual values to version control
 
 # =============================================
+# CLERK AUTHENTICATION (Required)
+# =============================================
+# CRITICAL: Use LIVE keys for production (pk_live_* and sk_live_*)
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_live_your_live_publishable_key_here
+CLERK_SECRET_KEY=sk_live_your_live_secret_key_here
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/master
+
+# =============================================
 # MASTER DASHBOARD DATABASE (Required)
 # =============================================
 # Create a separate Supabase project for the master dashboard
@@ -62,6 +71,15 @@ ANTHROPIC_API_KEY=your-anthropic-api-key
 # =============================================
 # SECURITY SETTINGS
 # =============================================
+# Admin emails (comma-separated) - UPDATE WITH REAL EMAILS
+ADMIN_EMAILS=admin@yourdomain.com,owner@yourdomain.com
+
+# CRITICAL: NEVER set BYPASS_AUTH to true in production
+BYPASS_AUTH=false
+
+# Optional: Enable debug endpoints in production (NOT RECOMMENDED)
+# ALLOW_DEBUG_ENDPOINTS=false
+
 ENCRYPTION_KEY=your-32-character-encryption-key
 JWT_SECRET=your-jwt-secret-for-auth
 
