--- a/railway-docker.env.example
+++ b/railway-docker.env.example
@@ -5,17 +5,19 @@
 # DO NOT commit actual values to version control
 
 # =============================================
-# AUTHENTICATION & SECURITY
+# AUTHENTICATION & SECURITY (Clerk)
 # =============================================
-NEXTAUTH_SECRET=your-super-long-random-secret-for-production-min-32-chars
-NEXTAUTH_URL=https://your-railway-app.railway.app
-ALLOWED_EMAILS=admin@yourdomain.com,admin2@yourdomain.com
+# CRITICAL: Use LIVE keys for production (pk_live_* and sk_live_*)
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_live_your_live_publishable_key_here
+CLERK_SECRET_KEY=sk_live_your_live_secret_key_here
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/master
 
-# OAuth Providers
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
-GITHUB_ID=your-github-client-id
-GITHUB_SECRET=your-github-client-secret
+# Admin emails (comma-separated) - UPDATE WITH REAL EMAILS
+ADMIN_EMAILS=admin@yourdomain.com,owner@yourdomain.com
+
+# CRITICAL: NEVER set BYPASS_AUTH to true in production
+BYPASS_AUTH=false
 
 # =============================================
 # DATABASE CONFIGURATION
