--- a/ai-generated-site/package.json
+++ b/ai-generated-site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stirring-dirt-excavation",
+  "name": "modern-saas-platform",
   "version": "0.1.0",
   "private": true,
   "scripts": {
